--- a/feat-c.html
+++ b/feat-c.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>feature C</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione sed possimus officiis molestias quae minima soluta harum rerum quas nam.</p>
 </body>
 </html>
