--- a/feat-c.html
+++ b/feat-c.html
@@ -8,5 +8,6 @@
 <body>
     <h1>feature C</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione sed possimus officiis molestias quae minima soluta harum rerum quas nam.</p>
+    <a href="https://www.google.com">submit kar do</a>
 </body>
 </html>
